Plus Minus Solved

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /Java/Java Loops/nbproject/private/
 /Java/Java Loops/build/
 /Java/Java Generics/nbproject/private/
+/Java/Java/nbproject/private/
